<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AnimalApp</string>
    <string-array name="user_types">
        <item>Utente</item>
        <item>Veterinario</item>
        <item>Ente</item>
    </string-array>
    <string name="title_activity_create_animal">CreateAnimal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modifica_account">modifica account</string>
    <string name="biografia">biografia</string>
    <string name="vaccinazioni">vaccinazioni</string>
    <string name="descrizione">descrizione</string>
    <string name="data">data</string>
    <string name="spesa">spesa</string>
    <string name="sverminazioni">sverminazioni</string>
    <string name="visite">visite</string>
    <string name="cibo">cibo</string>
    <string name="altro">altro</string>
    <string name="spesa_totale">Spesa totale</string>
    <string name="failed_to_retrieve_animal_data">Impossibile recuperare i dati sugli animali</string>
    <string name="inserisci_i_dati_evento">Inserisci i dati dell\'evento</string>
    <string name="please_fill_all_fields">Per favore compila tutti i campi</string>
    <string name="animal_updated_successfully">Animale aggiornato con successo</string>
    <string name="failed_to_update_animal">Impossibile aggiornare l\'animale</string>
    <string name="animal_updated_successfully1">Animale aggiornato con successo</string>
    <string name="failed_to_update_animal1">Impossibile aggiornare l\'animale</string>
    <string name="animal_updated_successfully2">Animale aggiornato con successo</string>
    <string name="failed_to_update_animal2">Impossibile aggiornare l\'animale</string>
    <string name="animal_updated_successfully3">Animale aggiornato con successo</string>
    <string name="failed_to_update_animal3">Impossibile aggiornare l\'animale</string>
    <string name="animal_updated_successfully4">Animale aggiornato con successo</string>
    <string name="failed_to_update_animal4">Impossibile aggiornare l\'animale</string>
    <string name="sviluppatori_team_missingno">Sviluppatori: Team MissingNo</string>
    <string name="invia">INVIA</string>
    <string name="rispondi...">Rispondi…</string>
    <string name="error">Error</string>
    <string name="inviato">Inviato</string>
    <string name="per_favore_inserisci_una_risposta">Per favore, inserisci una risposta</string>
    <string name="error_retrieving_data">Error retrieving data</string>
    <string name="seleziona_la_lingua_che_desideri_impostare">Seleziona la lingua che desideri impostare</string>
    <string name="italiano">italiano</string>
    <string name="inglese">inglese</string>
    <string name="cambio_lingua">cambio lingua</string>
    <string name="impostare_italiano_come_lingua">impostare italiano come lingua ?</string>
    <string name="conferma">Conferma</string>
    <string name="annulla">Annulla</string>
    <string name="cambio_avvenuto_con_successo">cambio avvenuto con successo</string>
    <string name="cambio_lingua1">cambio lingua</string>
    <string name="impostare_inglese_come_lingua">impostare inglese come lingua ?</string>
    <string name="conferma1">Conferma</string>
    <string name="change_made_successfully">change made successfully</string>
    <string name="inserisci_richiesta">Inserisci richiesta</string>
    <string name="invia1">INVIA</string>
    <string name="richiesta_inviata">Richiesta inviata</string>
    <string name="errore">Errore</string>
    <string name="errore1">Errore</string>
    <string name="per_favore_inserisci_una_richiesta">Per favore, inserisci una richiesta</string>
    <string name="errore2">Errore</string>
    <string name="select_picture">Select Picture</string>
    <string name="errore_nel_caricamento_dell_immagine">Errore nel caricamento dell\'immagine</string>
    <string name="richiesta_inviata1">Richiesta inviata</string>
    <string name="errore_nell_aggiornamento_della_richiesta">Errore nell\'aggiornamento della richiesta</string>
    <string name="errore_nell_aggiornamento_della_richiesta1">Errore nell\'aggiornamento della richiesta</string>
    <string name="name">Name</string>
    <string name="compleanno">Compleanno</string>
    <string name="create_animal">Crea animale</string>
    <string name="no_image_selected">Nessuna immagine selezionata</string>
    <string name="select_an_animal_type">Seleziona tipo di animale</string>
    <string name="upload_an_image">Carica un immagine</string>
    <string name="animal_created_successfully">Animale creato con successo</string>
    <string name="failed_to_create_animal">Errore nella creazione dell\'animale</string>
    <string name="user_updated_successfully1">Utente aggiornato con successo</string>
    <string name="failed_to_update_user1">Errore nell\'aggiornamento utente</string>
    <string name="failed_to_retrieve_user_data1">Impossibile recuperare i dati dell\'utente</string>
    <string name="e_tutto_buggato">E\' tutto buggato</string>
    <string name="seleziona_il_tipo_di_utente_prima_di_procedere">Seleziona il tipo di utente prima di procedere</string>
    <string name="dati">Dati</string>
    <string name="name1">Nome</string>
    <string name="surname">Cognome</string>
    <string name="company_name">Nome società</string>
    <string name="age">Età</string>
    <string name="save_profile">Salva profilo</string>
    <string name="no_image_selected1">Nessuna immagione selezionata</string>
    <string name="profile_created">Profile Creato</string>
    <string name="please_fill_all_fields1">Riempire tutti i campi</string>
    <string name="please_choose_a_profile_picture_before_saving">Selezione una immagine profilo prima di salvare</string>
    <string name="eliminare_l_account_un_processo_irreversibile_sei_sicuro_di_voler_eliminare_questo_profilo">Eliminare l\'account è un processo irreversibile. Sei sicuro di voler eliminare questo profilo?</string>
    <string name="elimina_account">Elimina Account</string>
    <string name="eliminazione_account">ELIMINAZIONE ACCOUNT</string>
    <string name="sei_sicuro_di_voler_cancellare_l_account">SEI SICURO DI VOLER CANCELLARE L\'ACCOUNT?</string>
    <string name="conferma2">Conferma</string>
    <string name="account_eliminato_con_successo">Account eliminato con successo</string>
    <string name="si_verificato_un_errore_durante_l_eliminazione_dell_utente">Si è verificato un errore durante l\'eliminazione dell\'utente</string>
    <string name="si_verificato_un_errore_durante_l_eliminazione_dei_dati_dell_utente">Si è verificato un errore durante l\'eliminazione dei dati dell\'utente</string>
    <string name="si_verificato_un_errore_durante_l_eliminazione_dell_immagine">Si è verificato un errore durante l\'eliminazione dell\'immagine</string>
    <string name="il_documento_dell_utente_non_esiste_o_non_contiene_l_url_dell_immagine">Il documento dell\'utente non esiste o non contiene l\'URL dell\'immagine</string>
    <string name="l_utente_non_autenticato">L\'utente non è autenticato</string>
    <string name="annulla1">Annulla</string>
    <string name="delete_from_pokedex">Elimina dal Pokedex</string>
    <string name="biografia1">Biografia</string>
    <string name="user_updated_successfully2">Utente aggiornato con successo</string>
    <string name="failed_to_update_user2">Aggiornamento utente fallito</string>
    <string name="failed_to_retrieve_user_data2">Impossibile recuperare i dati dell\'utente</string>
    <string name="failed_to_retrieve_animal_data1">Impossibile recuperare i dati dell\'animale</string>
    <string name="bio_non_impostata">Biografia non impostata</string>
    <string name="modificare_la_password_un_processo_irreversibile_la_password_precedente_non_permetter_pi_di_eseguire_l_accesso_all_account_dopo_la_reimpostazione_della_password_verrai_reindirizzato_al_login_dell_app">Modificare la Password è un processo irreversibile. La Password precedente non permetterà più di eseguire l\'accesso all\'account. Dopo la reimpostazione della password verrai reindirizzato al login dell\'app.</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="modificare_password">MODIFICARE PASSWORD?</string>
    <string name="sei_sicuro_di_voler_modificare_la_password">SEI SICURO DI VOLER MODIFICARE LA PASSWORD?</string>
    <string name="conferma3">Conferma</string>
    <string name="check_your_email1">Check your email</string>
    <string name="unable_to_send_email2">Unable to send email</string>
    <string name="annulla2">Annulla</string>
    <string name="finish">FINISH</string>
    <string name="inserisci_una_biografia">Inserisci una biografia</string>
    <string name="vaccinazioni1">Vaccinazioni</string>
    <string name="sverminazioni1">Sverminazioni</string>
    <string name="visite1">Visite</string>
    <string name="cibo1">Cibo</string>
    <string name="altro1">Altro</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="animal_updated_successfully5">Animale aggiornato con successo</string>
    <string name="failed_to_update_animal5">Errore aggiornamento animale</string>
    <string name="user_updated_successfully3">Utente aggiornato con successo</string>
    <string name="failed_to_update_user3">Errore aggiornamento utente</string>
    <string name="failed_to_retrieve_user_data3">Impossibile recuperare i dati dell\'utente</string>
    <string name="sei_sicuro_di_voler_eliminare">Sei sicuro di voler eliminare questo animale?</string>
    <string name="animale_eliminato_correttamente">Animale eliminato correttamente</string>
    <string name="fallimento_eliminazione_animale" tools:ignore="Typos">Non è stato possibile eliminare l\'animale</string>
    <string name="failed_to_retrieve_animal_data4">Impossibile recuperare i dati dell\'animale</string>
    <string name="sei_sicuro_di_voler_eliminare_questa_riga">Sei seicuro di voler eliminare questa riga?</string>
    <string name="animale_aggiornato_correttamente">Animale aggiornato correttamente</string>
    <string name="errore_aggiornamento_animale" tools:ignore="Typos">Non è stato possibile aggiornare l\'animale</string>
    <string name="modifica_password1">Modifica Password</string>
    <string name="elimina_account1">Elimina Account</string>
    <string name="information_not_obtained">Information not obtained</string>
    <string name="error_retrieving_data1">Errore durante il recupero dei dati</string>
    <string name="error_retrieving_data2">Errore durante il recupero dei dati</string>
    <string name="error_retrieving_data3">Errore durante il recupero dei dati</string>
    <string name="aggiungi_richiesta">AGGIUNGI RICHIESTA</string>
    <string name="notifiche">Notifiche</string>
    <string name="privacy_e_sicurezza">Privacy e sicurezza</string>
    <string name="lingua">Lingua</string>
    <string name="forgot_password">Password dimenticata</string>
    <string name="enter_your_e_mail_adress">Inserisci il tuo indirizzo E-mail</string>
    <string name="cancel">Cancella</string>
    <string name="reset">Reset</string>
    <string name="descrizione2">Descrizione:</string>
    <string name="type_here">Scrivi qui</string>
    <string name="data1">Data:</string>
    <string name="type_here1">Scrivi qui</string>
    <string name="type_here2">Scrivi qui</string>
    <string name="spesa1">Spesa:</string>
    <string name="delete">Eliminare</string>
    <string name="rispondi">Rispondi…</string>
    <string name="invia2">INVIA</string>
    <string name="accesso">Accesso</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="accedi">Accedi</string>
    <string name="non_mi_ricordo_la_password">Non mi ricordo la Password</string>
    <string name="suono_notifiche">Suono notifiche</string>
    <string name="vibrazione_notifiche">Vibrazione Notifiche</string>
    <string name="mostra_notifica">Mostra Notifica</string>
</resources>