<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/minimalist_background"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".CreateProfile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textColor="@color/dark_green"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_margin="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="top|center"
            android:id="@+id/profile_pic"
            android:background="@drawable/profile_image"
            android:scaleType="fitCenter"
            android:clickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleziona_il_tipo_di_utente_prima_di_procedere"
            android:id="@+id/text_select_user_type"
            android:padding="8dp"
            android:background="@color/dark_green"
            android:textColor="@color/white"
            android:layout_margin="10dp" />

        <Spinner
            android:id="@+id/user_types"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            android:entries="@array/user_types"
            android:padding="8dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dati"
            android:padding="8dp"
            android:background="@color/dark_green"
            android:textColor="@color/white"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/name1"
            android:padding="8dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/profile_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/surname"
            android:padding="8dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/profile_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            android:hint="Company Name"
            android:padding="8dp"
            android:textColor="@color/black"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/profile_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/age"
            android:padding="8dp"
            android:textColor="@color/black" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_profile"
            android:id="@+id/save_profile"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:backgroundTint="@color/light_green"
            app:cornerRadius="30dp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/cp_progressbar" />


        </LinearLayout>

</LinearLayout>